Java 17 Version - JEP 406: Pattern Matching for switch (Preview)